--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -3,7 +3,7 @@
         <img src="/static/images/logo.png" alt="Logo" class="footer-logo">
         <div class="logo-text">
             <span>Kawata <strong>v1.3.0</strong></span>
-            <p>An Osu! server that promotes cheating.</p>
+            <p>An Osu! server that allows the usage of cheats and custom features.</p>
         </div>
     </div>
     <div class="footer-section socials-section" id="hina_footer">
