--- a/templates/profile.html
+++ b/templates/profile.html
@@ -394,5 +394,5 @@
     {% endif %}
     {% endif %}
 </style>
-
+<script src="/static/js/hina_temp_bug_fix.js" defer></script>
 {% endblock bottom %}
